# ibm-watsonx-orchestrate-adk

./: .gitignore  .secrets.baseline  README.md  build.sh  logging.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: wxo-agent-builder-sdk-access-request.md
.sps/: Dockerfile  containerize.sh  release.sh
docs/: 04_observability.md  0_getting_started.md  1_server_start.md  2_agents.md  2_connections.md  2_knowledge_bases.md  2_tools.md  3_python_tool_credentials.md  4_toolkits.md  9_cli_development.md  ServerStart.md
examples/agent_builder/cat_jokes/: import-all.sh
examples/agent_builder/customer_care/: .secrets.baseline  import-all.sh  readme.md
examples/agent_builder/ibm_knowledge/: import_all.sh
examples/agent_builder/ibm_knowledge/agents/: ibm_agent.yaml
examples/agent_builder/manager_pal/: import-all.sh  manager_pal_orchestrator.yaml
examples/agent_builder/manager_pal/agents/: hr_agent.yaml  jokester_agent.yaml  manager_agent.yaml
examples/agent_builder/manager_pal/tools/: _w3.py  cat-ops-cat-facts.openapi.yml  find_user_id.py  find_user_management_chain.py  find_user_peers.py
examples/agent_builder/tool_building/: .gitignore  00_generate_tool_sample.py  01_load_tool_sample.py
examples/auth/: basic.py
examples/flow_runtime/hello_world/: env.sh  flow-Tip.sh  publishModel-Tip.sh
ibm_watsonx_orchestrate/client/: service_instance.py
ibm_watsonx_orchestrate/client/resources/: wxo_resource.py
sdk/python/ibm_watsonx_orchestrate/: MANIFEST.in  README.md  build.sh  setup.py
sdk/python/ibm_watsonx_orchestrate/ibm_watsonx_orchestrate/: chat_messages.py  href_definitions.py
sdk/python/ibm_watsonx_orchestrate/ibm_watsonx_orchestrate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ibm_watsonx_orchestrate/: __init__.py
src/ibm_watsonx_orchestrate/agent_builder/agents/: __init__.py  expert_agent.py  orchestrate_agent.py  types.py
src/ibm_watsonx_orchestrate/agent_builder/connections/: __init__.py  connections.py
src/ibm_watsonx_orchestrate/agent_builder/knowledge_bases/: knowledge_base.py  knowledge_base_requests.py  types.py
src/ibm_watsonx_orchestrate/agent_builder/tools/: __init__.py  base_tool.py  openapi_tool.py  python_tool.py  types.py
src/ibm_watsonx_orchestrate/agent_builder/utils/: config.py  pydantic_utils.py
src/ibm_watsonx_orchestrate/cli/: config.py  init_helper.py  main.py
src/ibm_watsonx_orchestrate/client/: base_api_client.py  client.py  credentials.py  local_service_instance.py  service_instance.py  utils.py
src/ibm_watsonx_orchestrate/client/_wrappers/: requests.py
src/ibm_watsonx_orchestrate/client/agents/: agent_client.py  assistant_agent_client.py  expert_agent_client.py  external_agent_client.py  orchestrator_agent_client.py
src/ibm_watsonx_orchestrate/client/connections/: __init__.py  applications_connections_client.py  connections_client.py  utils.py
src/ibm_watsonx_orchestrate/client/knowledge_bases/: knowledge_base_client.py
src/ibm_watsonx_orchestrate/client/messaging/: chat_messages.py  messages.py
src/ibm_watsonx_orchestrate/client/resources/: href_definitions.py  threads.py
src/ibm_watsonx_orchestrate/client/toolkit/: toolkit_client.py
src/ibm_watsonx_orchestrate/client/tools/: tool_client.py
src/ibm_watsonx_orchestrate/docker/: compose-lite.yml  default.env
src/ibm_watsonx_orchestrate/docker/sdk/: ibm_watsonx_orchestrate-0.1.0-py3-none-any.whl
src/ibm_watsonx_orchestrate/docker/tempus/: common-config.yaml  readme.md  server.cert  server.key
src/ibm_watsonx_orchestrate/run/: connections.py
src/ibm_watsonx_orchestrate/utils/: utils.py
src/ibm_watsonx_orchestrate/utils/logging/: logger.py  logging.yaml
tempus-dev/: readme.md
tests/agent_builder/agent/: test_agent.py  test_expert_agent.py  test_orchestrate_agent.py
tests/agent_builder/connections/: test_connections.py
tests/agent_builder/fixtures/: testitall.openapi.json
tests/agent_builder/tools/: test_openapi_tool.py  test_python_tool.py
tests/agent_builder/tools/snapshots/: snap_test_openapi_tool.py  (+1 more)
tests/agent_builder/utils/: test_pydantic_utils.py
tests/client/: test_client.py  test_utils.py
tests/client/connections/: applications_connections_client.py
tests/client/resources/: config.yaml  credentials.yaml
tests/core/: test_credentials.py
tests/mocks/: mock_base_api.py  mock_typer.py
tests/run/: test_run_connections.py
tests/scripts/: basic.py
tests/utils/: matcher.py
(+64 files in other folders)
